--- a/pebble-slider.css
+++ b/pebble-slider.css
@@ -27,21 +27,21 @@
     position: relative;
     width: 100%;
 }
-.pebble-slider .ps-base .ps-range-rail {
+.pebble-slider .ps-range-rail {
     background-color: #e0e0e0;
     border-radius: 10px;
     box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.125);
     overflow: hidden;
     position: relative;
 }
-.pebble-slider .ps-base .ps-range-rail .ps-range-subrail {
+.pebble-slider .ps-range-subrail {
     position: absolute;
 }
-.pebble-slider .ps-base .ps-range-rail .ps-range-subrail .ps-range-bar {
+.pebble-slider .ps-range-bar {
     background-color: #a0a0a0;
     position: absolute;
 }
-.pebble-slider .ps-base .ps-toggle-overlay {
+.pebble-slider .ps-toggle-overlay {
     position: absolute;
     height: 100%;
     left: 0;
@@ -49,10 +49,10 @@
     top: 0;
     width: 100%;
 }
-.pebble-slider .ps-base .ps-toggle-rail {
+.pebble-slider .ps-toggle-rail {
     position: absolute;
 }
-.pebble-slider .ps-base .ps-toggle-rail .ps-toggle-neck {
+.pebble-slider .ps-toggle-neck {
     background-color: black;
     border-radius: 10px;
     cursor: pointer;
@@ -62,7 +62,7 @@
     left: 0;
     width: 10px;
 }
-.pebble-slider .ps-base .ps-toggle-rail .ps-toggle-neck .ps-toggle-handle {
+.pebble-slider .ps-toggle-handle {
     background-color: #a0a0a0;
     border-radius: 8px;
     height: 10px;
@@ -72,8 +72,8 @@
     padding: 3px;
     width: 10px;
 }
-.pebble-slider .ps-base .ps-toggle-neck:hover .ps-toggle-handle,
-.pebble-slider .ps-base .ps-toggle-neck.active .ps-toggle-handle {
+.pebble-slider .ps-toggle-neck:hover .ps-toggle-handle,
+.pebble-slider .ps-toggle-neck.active .ps-toggle-handle {
     /* box-shadow: 0px 0px 0px 1px rgba(225, 69, 4, 0.75); */
     box-shadow: 0px 0px 0px 1px rgb(0, 0, 0);
 }
@@ -94,18 +94,18 @@
     height: 20px;
     width: 300px;
 }
-.pebble-slider.ps-horizontal-type .ps-base .ps-range-rail {
+.pebble-slider.ps-horizontal-type .ps-range-rail {
     height: 50%;
     top: 25%;
     width: 100%;
 }
-.pebble-slider.ps-horizontal-type .ps-base .ps-range-rail .ps-range-subrail {
+.pebble-slider.ps-horizontal-type .ps-range-subrail {
     height: 100%;
     left: 5px;
     right: 5px;
     top: 0;
 }
-.pebble-slider.ps-horizontal-type .ps-base .ps-range-rail .ps-range-subrail .ps-range-bar {
+.pebble-slider.ps-horizontal-type .ps-range-bar {
     height: 100%;
     left: auto;
     opacity: 1;
@@ -113,13 +113,13 @@
     top: 0;
     width: 150%
 }
-.pebble-slider.ps-horizontal-type .ps-base .ps-toggle-rail {
+.pebble-slider.ps-horizontal-type .ps-toggle-rail {
     height: 50%;
     left: 5px;
     right: 5px;
     top: 25%;
 }
-.pebble-slider.ps-horizontal-type .ps-base .ps-toggle-rail .ps-toggle-neck {
+.pebble-slider.ps-horizontal-type .ps-toggle-neck {
     margin-left: -5px;
 }
 .pebble-slider.ps-horizontal-type .ps-base.ps-transition .ps-range-bar {
@@ -149,30 +149,30 @@
     padding: 10px 0;
     width: 20px;
 }
-.pebble-slider.ps-vertical-type .ps-base .ps-range-rail {
+.pebble-slider.ps-vertical-type .ps-range-rail {
     height: 100%;
     left: 25%;
     width: 50%;
 }
-.pebble-slider.ps-vertical-type .ps-base .ps-range-rail .ps-range-subrail {
+.pebble-slider.ps-vertical-type .ps-range-subrail {
     bottom: 5px;
     left: 0;
     top: 5px;
     width: 100%;
 }
-.pebble-slider.ps-vertical-type .ps-base .ps-range-rail .ps-range-subrail .ps-range-bar {
+.pebble-slider.ps-vertical-type .ps-range-bar {
     width: 100%;
     height: 150%;
     left: 0;
     top: auto;
 }
-.pebble-slider.ps-vertical-type .ps-base .ps-toggle-rail {
+.pebble-slider.ps-vertical-type .ps-toggle-rail {
     bottom: 5px;
     left: 25%;
     right: 5px;
     top: 5px;
     width: 50%;
 }
-.pebble-slider.ps-vertical-type .ps-base .ps-toggle-rail .ps-toggle-neck {
+.pebble-slider.ps-vertical-type .ps-toggle-neck {
     margin-top: -5px;
 }
