--- a/pebble-slider.css
+++ b/pebble-slider.css
@@ -32,7 +32,18 @@
     border-radius: 10px;
     box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.125);
     overflow: hidden;
-    position: relative;
+    position: absolute;
+}
+.pebble-slider .ps-range-rail:after {
+    bottom: 0;
+    content: ".";
+    display: block;
+    left: 0;
+    overflow: hidden;
+    position: absolute;
+    right: 0;
+    top: 0;
+    text-indent: -999em;
 }
 .pebble-slider .ps-range-subrail {
     position: absolute;
@@ -95,9 +106,10 @@
     width: 300px;
 }
 .pebble-slider.ps-horizontal-type .ps-range-rail {
-    height: 50%;
+    bottom: 25%;
+    left: 0;
+    right: 0;
     top: 25%;
-    width: 100%;
 }
 .pebble-slider.ps-horizontal-type .ps-range-subrail {
     height: 100%;
