--- a/pebble-slider.css
+++ b/pebble-slider.css
@@ -120,6 +120,15 @@
     width: 40px;
 }
 
+.ps-horizontal-type .ps-transition .ps-range-negative-spectrum-bar,
+.ps-horizontal-type .ps-transition .ps-range-positive-spectrum-bar {
+    transition: width 0.2s;
+    -moz-transition: width 0.2s;
+    -webkit-transition: width 0.2s;
+    -ms-transition: width 0.2s;
+    -o-transition: width 0.2s;
+}
+
 .ps-horizontal-type .ps-transition .ps-range-bar {
     transition: right 0.2s;
     -moz-transition: right 0.2s;
@@ -134,6 +143,15 @@
     -webkit-transition: left 0.2s;
     -ms-transition: left 0.2s;
     -o-transition: left 0.2s;
+}
+
+.ps-vertical-type .ps-transition .ps-range-negative-spectrum-bar,
+.ps-vertical-type .ps-transition .ps-range-positive-spectrum-bar {
+    transition: height 0.2s;
+    -moz-transition: height 0.2s;
+    -webkit-transition: height 0.2s;
+    -ms-transition: height 0.2s;
+    -o-transition: height 0.2s;
 }
 
 .ps-vertical-type .ps-transition .ps-range-bar {
